find users by email and name methods are added